trying to fix image visibility bug
Background image not showing up on github site, despite showing up when opened locally

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
 /* Landing Page CSS */
 
 .home-inner {
-  background-image: url(img/header4.jpg);
+  background-image: url(img/header4.JPG);
 }
 
 .welcome:hover {
